# TRA-SAS-TEST

./: AGENTS.md  Dockerfile  README.md  docker-compose.yml  extract_docx.py  pyproject.toml  requirements.txt  scratch_clean.py  scratch_inspect.py  skills-lock.json
.gemini/: GEMINI.md
app/: main.py
app/core/: config.py  exceptions.py  graph.py
app/database/: connection.py
app/schemas/: state.py
app/services/: bm25_retriever.py  ingest.py  llm.py  vector_store.py  web_search.py
app/templates/: index.html
data/raw/: 01_2015_ND-CP_262378.doc  08_2015_ND-CP_263815.doc  128_2020_ND-CP_426375.doc  12_2015_TT-BTC_267141.doc  33_2023_TT-BTC_548476.doc  68_2016_ND-CP_315475.doc
notebooks/: check_data.ipynb
scripts/: extract_docx.py  ingest.py  view_data.py
specs/: pipeline_spec.md
tests/: test_api_endpoints.py  test_graph.py  test_mock_pipeline.py
