[project]
name = "rag-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.1",
    "google-generativeai>=0.2.0",
    "langchain-google-genai>=0.1.0",
    "langchain>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "sentence-transformers>=2.2.0",
    "pydantic-settings>=2.0.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"


